updating scs-101 tutorial

--- a/scs-101/scs-101-producer/pom.xml
+++ b/scs-101/scs-101-producer/pom.xml
@@ -28,7 +28,7 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <version>${spring-boot.version}</version>
+                <version>2.4.5</version>
                 <configuration>
                     <excludes>
                         <exclude>
