--- a/scs-100-2/docker-compose.yml
+++ b/scs-100-2/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 services:
   kafka:
     image: wurstmeister/kafka
-    container_name: kafka-mc
+    container_name: kafka
     ports:
       - "9092:9092"
     environment:
