--- a/scs-100-2/src/main/resources/application.yml
+++ b/scs-100-2/src/main/resources/application.yml
@@ -30,11 +30,12 @@ spring.cloud.stream:
     binder:
       brokers: localhost:9092 # just to use it in the service app, Its already 'localhost:9092' by default
       autoAddPartitions: true
+      minPartitionCount: 6
       configuration:
         application.id: ${spring.application.name}
-        state.dir: ${spring.application.name}${server.port} # to give a unique dir name in case you run multiple of this app on the same machine
+        state.dir: state-${spring.application.name}-${server.port} # to give a unique dir name in case you run multiple of this app on the same machine
         default.key.serde: org.apache.kafka.common.serialization.Serdes$UUIDSerde
         default.value.serde: org.apache.kafka.common.serialization.Serdes$StringSerde
-        commit.interval.ms: 1000
+        commit.interval.ms: 100
         auto.offset.reset: latest
 logging.level.com.ehsaniara.scs_kafka_intro: debug
