nginx.conf modification

--- a/scs-100-2/nginx/nginx.conf
+++ b/scs-100-2/nginx/nginx.conf
@@ -1,8 +1,8 @@
 events { }
 stream {
     upstream loadbalance {
-        server host.docker.internal:8081;
-        server host.docker.internal:8082;
+        server host.docker.internal:8081 max_fails=1 fail_timeout=1s;
+        server host.docker.internal:8082 max_fails=1 fail_timeout=1s;
     }
 
     server {
