--- a/scs-101/scs-101-shipping/pom.xml
+++ b/scs-101/scs-101-shipping/pom.xml
@@ -10,21 +10,39 @@
     </parent>
 
     <groupId>com.ehsaniara.scs_kafka_intro</groupId>
-    <artifactId>scs-101-commons</artifactId>
+    <artifactId>scs-101-shipping</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>scs-101-commons</name>
+    <name>scs-101-shipping</name>
     <packaging>jar</packaging>
+    <description>Demo project for Spring Boot</description>
 
     <properties>
         <java.version>11</java.version>
+        <spring-cloud.version>2020.0.3</spring-cloud.version>
         <spring-boot.version>${project.parent.version}</spring-boot.version>
     </properties>
 
     <dependencies>
 
         <dependency>
+            <groupId>com.ehsaniara.scs_kafka_intro</groupId>
+            <artifactId>scs-101-commons</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-stream-binder-kafka-streams</artifactId>
         </dependency>
 
         <dependency>
@@ -33,18 +51,26 @@
             <optional>true</optional>
         </dependency>
 
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-web</artifactId>
-        </dependency>
-
     </dependencies>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>${spring-cloud.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
     <build>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>${spring-boot.version}</version>
                 <configuration>
                     <excludes>
                         <exclude>
