--- a/scs-101/scs-101-shipping/pom.xml
+++ b/scs-101/scs-101-shipping/pom.xml
@@ -72,6 +72,9 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <version>${spring-boot.version}</version>
                 <configuration>
+                    <layers>
+                        <enabled>true</enabled>
+                    </layers>
                     <excludes>
                         <exclude>
                             <groupId>org.projectlombok</groupId>
