update commons maven ci

--- a/scs-101/scs-101-commons/pom.xml
+++ b/scs-101/scs-101-commons/pom.xml
@@ -57,4 +57,12 @@
         </plugins>
     </build>
 
+    <distributionManagement>
+        <repository>
+            <id>github</id>
+            <name>GitHub ehsaniara Apache Maven Packages</name>
+            <url>https://maven.pkg.github.com/ehsaniara/scs-kafka-intro</url>
+        </repository>
+    </distributionManagement>
+
 </project>
