--- a/.github/workflows/mavenpublish.yml
+++ b/.github/workflows/mavenpublish.yml
@@ -24,5 +24,5 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           echo $GITHUB_TOKEN | docker login ghcr.io -u USERNAME --password-stdin
-          docker build scs-kafka-intro:scs-101-inventory-check-latest -f scs-101/scs-101-inventory-check/Dockerfile .
+          docker build -t scs-kafka-intro:scs-101-inventory-check-latest -f scs-101/scs-101-inventory-check/Dockerfile .
 #          docker push ghcr.io/ehsaniara/scs-kafka-intro:scs-101-inventory-check-latest
