🔊 push docker image

--- a/.github/workflows/mavenpublish.yml
+++ b/.github/workflows/mavenpublish.yml
@@ -25,5 +25,5 @@ jobs:
         run: |
           cd scs-101/scs-101-inventory-check
           echo $GITHUB_TOKEN | docker login ghcr.io -u USERNAME --password-stdin
-          docker build --build-arg GITHUB_TOKEN=$GITHUB_TOKEN -t scs-kafka-intro:scs-101-inventory-check-latest .
+          docker build --build-arg GITHUB_TOKEN=$GITHUB_TOKEN -t ghcr.io/ehsaniara/scs-kafka-intro:scs-101-inventory-check-latest .
           docker push ghcr.io/ehsaniara/scs-kafka-intro:scs-101-inventory-check-latest
