--- a/scs-101/scs-101-inventory-check/src/main/resources/application.yml
+++ b/scs-101/scs-101-inventory-check/src/main/resources/application.yml
@@ -4,3 +4,7 @@ spring.cloud.stream.bindings:
   inventoryCheck-out-0.destination: scs-101.orderStatus
 server.port: 8082
 logging.level.com.ehsaniara.scs_kafka_intro: debug
+---
+spring:
+  config.activate.on-profile: kube
+  cloud.stream.kafka.streams.binder.brokers: my-cluster-kafka-bootstrap.kafka:9092
