--- a/scs-101/scs-101-order/pom.xml
+++ b/scs-101/scs-101-order/pom.xml
@@ -65,6 +65,14 @@
         </dependencies>
     </dependencyManagement>
 
+    <repositories>
+        <repository>
+            <id>github</id>
+            <name>GitHub ehsaniara Apache Maven Packages</name>
+            <url>https://maven.pkg.github.com/ehsaniara/scs-kafka-intro</url>
+        </repository>
+    </repositories>
+
     <build>
         <plugins>
             <plugin>
