📦 fixing the deployment plan

--- a/.github/workflows/scs101inventorycheck.yml
+++ b/.github/workflows/scs101inventorycheck.yml
@@ -24,6 +24,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
+          cp scs-101/Dockerfile scs-101/scs-101-inventory-check/Dockerfile
           cd scs-101/scs-101-inventory-check
           echo $GITHUB_TOKEN | docker login ghcr.io -u USERNAME --password-stdin
           docker build --build-arg GITHUB_TOKEN=$GITHUB_TOKEN -t ghcr.io/ehsaniara/scs-kafka-intro:scs-101-inventory-check-latest .
