--- a/.github/workflows/scs101commons.yml
+++ b/.github/workflows/scs101commons.yml
@@ -25,4 +25,5 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
+          sed -i 's|</project>|<distributionManagement><repository><id>github</id><name>GitHub</name><url>https://maven.pkg.github.com/ehsaniara/scs-kafka-intro</url></repository></distributionManagement></project>|g' scs-101/scs-101-commons/pom.xml ;
           mvn -f scs-101/scs-101-commons deploy
