🚀 📦 Updating the kubernetes 🎨 deployments ✨

--- a/.github/workflows/scs101order.yml
+++ b/.github/workflows/scs101order.yml
@@ -27,5 +27,5 @@ jobs:
           cp scs-101/Dockerfile scs-101/scs-101-order/Dockerfile
           cd scs-101/scs-101-order
           echo $GITHUB_TOKEN | docker login ghcr.io -u USERNAME --password-stdin
-          docker build --build-arg GITHUB_TOKEN=$GITHUB_TOKEN -t ghcr.io/ehsaniara/scs-kafka-intro:scs-101-order-latest .
-          docker push ghcr.io/ehsaniara/scs-kafka-intro:scs-101-order-latest
+          docker build --build-arg GITHUB_TOKEN=$GITHUB_TOKEN -t ghcr.io/ehsaniara/scs-kafka-intro:scs-101-order .
+          docker push ghcr.io/ehsaniara/scs-kafka-intro:scs-101-order
