--- a/.github/workflows/scs101inventorycheck.yml
+++ b/.github/workflows/scs101inventorycheck.yml
@@ -27,5 +27,5 @@ jobs:
           cp scs-101/Dockerfile scs-101/scs-101-inventory-check/Dockerfile
           cd scs-101/scs-101-inventory-check
           echo $GITHUB_TOKEN | docker login ghcr.io -u USERNAME --password-stdin
-          docker build --build-arg GITHUB_TOKEN=$GITHUB_TOKEN -t ghcr.io/ehsaniara/scs-kafka-intro:scs-101-inventory-check-latest .
-          docker push ghcr.io/ehsaniara/scs-kafka-intro:scs-101-inventory-check-latest
+          docker build --build-arg GITHUB_TOKEN=$GITHUB_TOKEN -t ghcr.io/ehsaniara/scs-kafka-intro:scs-101-inventory-check .
+          docker push ghcr.io/ehsaniara/scs-kafka-intro:scs-101-inventory-check
