--- a/scs-101/scs-101-shipped/src/main/resources/application.yml
+++ b/scs-101/scs-101-shipped/src/main/resources/application.yml
@@ -2,4 +2,8 @@ spring.application.name: scs-101-shipped
 spring.cloud.stream.bindings.shippedConsumer-in-0.destination: scs-101.shipped
 server.port: 8084
 logging.level.com.ehsaniara.scs_kafka_intro: debug
+---
+spring:
+  config.activate.on-profile: kube
+  cloud.stream.kafka.streams.binder.brokers: my-cluster-kafka-bootstrap.kafka:9092
 
