--- a/scs-101/scs-101-shipping/src/main/resources/application.yml
+++ b/scs-101/scs-101-shipping/src/main/resources/application.yml
@@ -4,5 +4,7 @@ spring.cloud.stream.bindings:
   shippingProcess-out-0.destination: scs-101.orderStatus
 server.port: 8083
 logging.level.com.ehsaniara.scs_kafka_intro: debug
-
-
+---
+spring:
+  config.activate.on-profile: kube
+  cloud.stream.kafka.streams.binder.brokers: my-cluster-kafka-bootstrap.kafka:9092
