--- a/scs-101/scs-101-order/k8s.yml
+++ b/scs-101/scs-101-order/k8s.yml
@@ -43,6 +43,8 @@ spec:
           env:
             - name: SPRING_PROFILES_ACTIVE
               value: kube
+            - name: JAVA_OPTS
+              value: "-XX:+UnlockExperimentalVMOptions -XX:MaxRAMFraction=1 -Xms128M -Xmx128M -XX:+Unlock"
             - name: MY_POD_IP
               valueFrom:
                 fieldRef:
